--- a/meeee/index.html
+++ b/meeee/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<section id='content'>
-	   <h1>[My Name]</h1>
-	   <h2>[My year and Major]</h2>
-	   <p>[My Goals for the semester]</p>
+	   <h1>[ZAC CARROLL]</h1>
+	   <h2>[junior graphic design]</h2>
+	   <p>[make all the stuff]</p>
 	</section>
 	
 </body>
