--- a/meeee/index.html
+++ b/meeee/index.html
@@ -9,7 +9,7 @@
 	<section id='content'>
 	   <h1>[ZAC CARROLL]</h1>
 	   <h2>[junior graphic design]</h2>
-	   <p>[make all the stuff]</p>
+	   <p>[make all the stuff.]</p>
 	</section>
 	
 </body>
