--- a/meeee/index.html
+++ b/meeee/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>First Webpage</title>
+	<title>First Stuff</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head>
 <body>
 	<section id='content'>
-	   <h1>[ZAC CARROLL]</h1>
-	   <h2>[junior graphic design]</h2>
-	   <p>[make all the stuff.]</p>
+	   <h1>ZAC CARROLL</h1>
+	   <h2>junior graphic design</h2>
+	   <p>make all the stuff.</p>
 	</section>
 	
 </body>
