--- a/homework/index.html
+++ b/homework/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<section id='content'>
-		<h1>[your name]'s Homework</h1>
+		<h1>Zac's Homework</h1>
 		<h2>Meee!</h2>
-				<p><a href='www.github.com'>Add your link(s) Here</a></p>
+				<p><a href='http://zacarroll.github.io/meeee/'>Add your link(s) Here</a></p>
 		<h2>Yum</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Cats vs Dogs</h2>
