--- a/cats-vs-dogs/semantically.html
+++ b/cats-vs-dogs/semantically.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-dogs vs cats
+  	<title>
+  		dogs vs cats
+  	</title>
+<h1>dogs vs cats</h1>
   </head>
   <body>
 <header>
 <nav>
-	<h1>photos</h1>
-	<h1>about</h1>
-	<h1>submit</h1>
-	<h1>blog</h1>
-	<h1>contact</h1>
+	<h2>photos</h2>
+	<h2>about</h2>
+	<h2>submit</h2>
+	<h2>blog</h2>
+	<h2>contact</h2>
 </nav>
 </header>
 <h2> Dogs Have Better Noses</h2>
