--- a/homework/index.html
+++ b/homework/index.html
@@ -11,9 +11,9 @@
 		<h2>Meee!</h2>
 				<p><a href='http://zacarroll.github.io/meeee/'>First Homework Link</a></p>
 		<h2>Yum</h2>
-				<p>http://zacarroll.github.io/yum/yum.html</p>
+				<p><a href="http://zacarroll.github.io/yum/yum.html">Recipes</a></p>
 		<h2>Cats vs Dogs</h2>
-				<p>http://zacarroll.github.io/cats-vs-dogs/semantically.html</p>
+				<p><a href="http://zacarroll.github.io/cats-vs-dogs/semantically.html>Cats V Dogs</a></p>
 		<h2>Wireframes</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Llama Love</h2>
