--- a/yum/yum.html
+++ b/yum/yum.html
@@ -13,8 +13,11 @@
     <h1>
       LEMON PASTA SALAD <EM>with</em> TOMATOES AND FETA
     </h1>
-  </header>
+  	</header>
+	<section>
   <p> makes 8 side dish servings</p>
+	</section>
+	<section>
     <h2>
       Ingredients
     </h2>
@@ -30,11 +33,14 @@
       <li>1 1/2 cups chopped red bell peppers</li>
       <li>1 1/2 cups crumbled feta cheese</li>
       <li>1 cup chopped green onions</li>
+	</section>
+	<section>
   <h2>
     Preparation
   </h2>
     <p>
       Whisk oil, lemon juice, mustard, garlic, and lemon peel in a small bowl to blend. Season dressing with salt and pepper.Cook penne in a large pot of boiling salted water until tender but still firm to bite, drain. Rinse pasta with cold water to cool quickly and drain again. Transfer pasta to a large bowl. Add tomatoes, bell beppers, feta cheese,and green onions. Pour dressing over and toss to coat. Season to taste with salt and pepper.
     </p>
+	</section>
   </body>
 </html>
