--- a/meeee/index.html
+++ b/meeee/index.html
@@ -10,7 +10,9 @@
 	<section id='content'>
 	   <h1>ZAC CARROLL</h1>
 	   <h2>junior graphic design</h2>
-	   <p>make all the stuff.</p>
+	   <p>make all the stuff.</p><br>
+	<address>
+	<a href="carroll.zac@gmail.com">Zac's Email</a>
 	</section>
 	
 </body>
