--- a/meeee/index.html
+++ b/meeee/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head>
 <body>
-	<img src="images/me.jpg">
+	<img src="images/me.jpg" alt="pic">
 	<section id='content'>
 	   <h1>ZAC CARROLL</h1>
 	   <h2>junior graphic design</h2>
