--- a/meeee/index.html
+++ b/meeee/index.html
@@ -6,13 +6,14 @@
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head>
 <body>
-	<img src="images/me.jpg" alt="pic">
 	<section id='content'>
+		<img src="images/me.jpg" alt="pic">
 	   <h1>ZAC CARROLL</h1>
 	   <h2>junior graphic design</h2>
 	   <p>make all the stuff.</p><br>
 	<address>
 	<a href="carroll.zac@gmail.com">Zac's Email</a>
+	</address>
 	</section>
 	
 </body>
