--- a/meeee/index.html
+++ b/meeee/index.html
@@ -6,8 +6,10 @@
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head>
 <body>
-	<section id='content'>
+	<section id='picture'>
 		<img src="images/me.jpg" alt="pic">
+	</section>
+	<section id='content'>
 	   <h1>ZAC CARROLL</h1>
 	   <h2>junior graphic design</h2>
 	   <p>make all the stuff.</p><br>
