--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -4,21 +4,24 @@
   	<title>
   		dogs vs cats
   	</title>
-<h1><img src="images/dogvscat-logo.gif"></h1>
+<h1 id="logo"><img src="images/dogvscat-logo.gif"></h1>
   </head>
   <body>
 <header>
 <nav>
-	<h2>photos</h2>
-	<h2>about</h2>
-	<h2>submit</h2>
-	<h2>blog</h2>
-	<h2>contact</h2>
+	<ul>
+	<li><a href="#">photos</a></li>
+	<li><a href"#">about</li>
+	<li><a href"#">submit</li>
+	<li><a href"#">blog</li>
+	<li><a href"#">contact</a></li>
 </nav>
 </header>
 <h2> Dogs Have Better Noses</h2>
+<img src="images/photo-1.jpg">
 <p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
 <h2> Cats Have Better Tongues</h2>
+<img src="images/photo-4.jpg">
 <p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
   </body>
   <footer>images and copy from wiki commons
