new dogsvcats link

--- a/homework/index.html
+++ b/homework/index.html
@@ -13,7 +13,7 @@
 		<h2>Yum</h2>
 				<p><a href="http://zacarroll.github.io/yum/yum.html">Recipes</a></p>
 		<h2>Cats vs Dogs</h2>
-				<p><a href="http://zacarroll.github.io/cats-vs-dogs/semantically.html">Cats V Dogs</a></p>
+				<p><a href="http://zacarroll.github.io/cats-vs-dogs/index.html">Cats V Dogs</a></p>
 		<h2>Wireframes</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Llama Love</h2>
