--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -11,10 +11,10 @@
 <nav>
 	<ul>
 	<li><a href="#">photos</a></li>
-	<li><a href"#">about</a></li>
-	<li><a href"#">submit</a></li>
-	<li><a href"#">blog</a></li>
-	<li><a href"#">contact</a></li>
+	<li><a href="#">about</a></li>
+	<li><a href="#">submit</a></li>
+	<li><a href="#">blog</a></li>
+	<li><a href="#">contact</a></li>
 </nav>
 </header>
 <h2> Dogs Have Better Noses</h2>
